--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,1 +1,14 @@
 $base-font: monospace;
+
+$black: #000;
+$white: #fff;
+$gray: #80808071;
+$red: #ff0000;
+$blue: #0000ff;
+
+$card-background: #ffffff90;
+$highlight: #dddddd;
+$header: #221c1f;
+$shadow-color: #00000040;
+$primary: #bd0878;
+$secondary: #808eb2;
