--- a/src/containers/Login/styles.scss
+++ b/src/containers/Login/styles.scss
@@ -26,11 +26,15 @@
   }
 }
 
-p {
+.error-container {
+  height: 30px;
+}
+.error-container p {
   color: $red;
+  margin-left: 17px;
 
-  margin-left: 20px;
   font-size: 12px;
+  line-height: 2px;
 }
 
 .input-wrapper {
