--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,17 +1,14 @@
 .home {
-  align-items: center;
+  padding: 16px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.product-list {
   display: flex;
-  flex: 1;
-  flex-direction: column;
-  font-family: monospace;
-  justify-content: center;
-
-  & h1 {
-    font-size: 30px;
-  }
-
-  & h5 {
-    font-size: 12px;
-    margin: 0;
-  }
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: space-around;
+  width: 100%;
+  gap: 20px;
 }
