--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -1,17 +1,20 @@
 .product-card {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #eee;
   padding: 16px;
   margin: 16px;
-  width: 200px; /* or any specific size */
+  width: 200px;
   text-align: center;
 
   &__image {
     max-width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    height: auto;
   }
 
   &__info {
     margin-top: 12px;
+    flex-grow: 1;
   }
 
   &__title {
@@ -22,6 +25,7 @@
 
   &__description {
     color: #666;
+    flex-grow: 1;
   }
 
   &__price {
@@ -31,7 +35,8 @@
   }
 
   &__action {
-    background-color: blue;
+    margin-top: auto;
+    background-color: $gray;
     color: white;
     padding: 8px 16px;
     border: none;
