--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,9 +1,23 @@
 .home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 16px;
   max-width: 1200px;
   margin: 0 auto;
+  & select {
+    max-width: 200px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #fff;
+    font-size: 16px;
+    color: #444;
+    outline: none;
+    width: 250px;
+    cursor: pointer;
+  }
 }
-
 .product-list {
   display: flex;
   flex-wrap: wrap;
