added styles to topbar, created routes and buttons for profile,gift,cart, added logic so it only shows when there is a user logged in

--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -24,7 +24,7 @@
   }
 
   &__description {
-    color: #666;
+    color: #827c7cb5;
     flex-grow: 1;
   }
 
@@ -43,7 +43,10 @@
     cursor: pointer;
 
     &:hover {
-      background-color: darkblue;
+      background-color: #274046;
     }
+  }
+  &:hover {
+    box-shadow: 0 4px 8px $shadow-color;
   }
 }
