--- a/src/components/TopBar/styles.scss
+++ b/src/components/TopBar/styles.scss
@@ -1,7 +1,8 @@
 .top-bar {
-  background-color: $header;
+  background: linear-gradient(to right, #274046, #e6dada);
   color: $white;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 10%;
   padding: 20px 30px;
@@ -14,6 +15,22 @@
   }
 
   &__nav {
+    &__logout {
+      text-decoration: none;
+      font-size: 18px;
+      color: #e74c3c;
+      transition: all 0.2s;
+      display: inline-block;
+      width: auto;
+      height: auto;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1);
+        color: $red;
+      }
+    }
+
     ul {
       list-style: none;
       padding: 0;
@@ -27,7 +44,7 @@
         a {
           text-decoration: none;
           font-size: 18px;
-          color: $highlight;
+          color: $black;
           transition: all 0.2s;
           display: inline-block;
           width: auto;
