--- a/src/components/TopBar/styles.scss
+++ b/src/components/TopBar/styles.scss
@@ -7,6 +7,7 @@
   gap: 10%;
   padding: 20px 30px;
   box-shadow: 0 4px 8px $shadow-color;
+  height: 80px;
 
   &__logo {
     img {
@@ -58,4 +59,29 @@
       }
     }
   }
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-menu {
+  display: block;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu button {
+  padding: 8px 12px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  text-align: left;
+}
+
+.dropdown-menu button:hover {
+  background-color: #ddd;
 }
