added a product-view for each product, changed how much information its showed based on the user pov of the component(more information showed if its the product-view)

--- a/src/components/TopBar/styles.scss
+++ b/src/components/TopBar/styles.scss
@@ -1,5 +1,6 @@
 .top-bar {
-  background: linear-gradient(to right, #274046, #e6dada);
+  // background: linear-gradient(to right, #274046, #e6dada);
+  background: rgba(210, 208, 202, 0.2);
   color: $white;
   display: flex;
   justify-content: space-between;
