--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -6,6 +6,8 @@
   margin: 16px;
   width: 200px;
   text-align: center;
+  text-decoration: none;
+  color: black;
 
   &__image {
     max-width: 100%;
@@ -20,12 +22,16 @@
   &__title {
     margin: 0;
     padding: 0;
+
     font-size: 1.25em;
+    text-decoration: none;
+    color: inherit;
   }
 
   &__description {
     color: #827c7cb5;
     flex-grow: 1;
+    font-size: 12px;
   }
 
   &__price {
