--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,9 @@ $white: #fff;
 $gray: #80808071;
 $red: #ff0000;
 $blue: #0000ff;
+$theme: repeating-linear-gradient(#d2d0ca55, #d2d0ca);
+$content: #27262111;
+$user-profile: #e0e0e0;
 
 $card-background: #ffffff90;
 $highlight: #dddddd;
