--- a/src/components/Cart/styles.scss
+++ b/src/components/Cart/styles.scss
@@ -7,9 +7,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 50px;
+  margin: 10px;
 
   img {
     width: 40%;
+    margin: 0;
   }
   h2 {
     margin: 0;
@@ -28,7 +31,7 @@
     }
   }
 
-  .cart-card__image {
+  &__image {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
