--- a/src/containers/GiftView/styles.scss
+++ b/src/containers/GiftView/styles.scss
@@ -1,31 +1,31 @@
 .gift-view {
   padding: 10px;
-  background-color: #f5f5f5;
+  background: $theme;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 40%;
-
   margin: 40px auto;
   text-decoration: none;
-  color: #333;
+
   h1 {
-    color: #333;
     text-align: center;
     margin-bottom: 20px;
   }
 
   ul {
     list-style-type: none;
-    padding: 0;
+    padding: 10px;
 
     li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-bottom: 10px;
-      background-color: #fff;
+      background-color: $content;
       padding: 5px;
       border-radius: 4px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
       text-decoration: none;
-      color: #333;
 
       a {
         text-decoration: none;
@@ -35,22 +35,29 @@
       }
     }
   }
-}
+  &__button {
+    padding: 10px 15px;
+    margin: 0;
 
-.gift-button {
-  padding: 10px 15px;
-  margin: 20px;
-
-  background-color: #333;
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
-}
-
-.gift-button:hover {
-  background-color: #555;
+    background: $gray;
+    color: $black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  &__button:hover {
+    background-color: #555;
+  }
+  &__name-icon {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  &__product-count {
+    margin-right: 20px;
+  }
 }
