--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 .home {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,7 @@
   padding: 16px;
   max-width: 1200px;
   margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
 
   & select {
     max-width: 200px;
