--- a/src/containers/Profile/styles.scss
+++ b/src/containers/Profile/styles.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #e0e0e0;
+  border: 1px solid $user-profile;
   padding: 20px;
   border-radius: 8px;
   width: 30%;
@@ -40,7 +40,15 @@
   &__details {
     margin-top: 10px;
     color: #666;
-
+    border: 1px solid $user-profile;
+    padding: 40px;
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    &__location {
+      font-weight: bold;
+    }
     p {
       margin: 5px 0;
     }
