--- a/src/containers/CartView/styles.scss
+++ b/src/containers/CartView/styles.scss
@@ -1,8 +1,9 @@
 .cart-view {
   display: flex;
-  width: 80%;
+  flex-direction: column;
+  width: 95%;
   max-width: 1000px;
-  margin: 40px auto;
+  margin: 20px auto;
   background-color: #ffffff;
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -11,13 +12,13 @@
 
   &__button-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
   }
   &__button-cart {
-    padding: 10px 15px;
-    margin: 20px;
-
+    padding: 20px;
+    margin: 10px 0;
     background-color: #333;
     color: #ffffff;
     border: none;
@@ -26,9 +27,27 @@
     text-transform: uppercase;
     font-weight: bold;
     transition: background-color 0.3s ease;
+    width: auto;
+    align-self: center;
   }
 
   &__button-cart:hover {
     background-color: #555;
+  }
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    margin: 40px auto;
+
+    &__button-container {
+      flex-direction: row;
+    }
+    &__button-cart {
+      width: auto;
+      padding: 10px 15px;
+      margin: 20px;
+    }
   }
 }
