--- a/src/containers/GiftView/styles.scss
+++ b/src/containers/GiftView/styles.scss
@@ -3,7 +3,8 @@
   background: $theme;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 40%;
+  width: 90%;
+  max-width: 500px;
   margin: 40px auto;
   text-decoration: none;
 
@@ -14,12 +15,13 @@
 
   ul {
     list-style-type: none;
-    padding: 10px;
+    padding: 0 10px;
 
     li {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      align-items: stretch;
       margin-bottom: 10px;
       background-color: $content;
       padding: 5px;
@@ -33,12 +35,14 @@
         font-weight: 500;
         transition: color 0.3s;
       }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
   &__button {
     padding: 10px 15px;
-    margin: 0;
-
     background: $gray;
     color: $black;
     border: none;
@@ -59,5 +63,27 @@
   }
   &__product-count {
     margin-right: 20px;
+  }
+
+  @media (min-width: 768px) {
+    width: 70%;
+    ul {
+      li {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+
+  @media (min-width: 992px) {
+    width: 50%;
+    ul {
+      padding: 0 20px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    width: 40%;
   }
 }
