add: colors under variables, changed how the product card looks based on the current view the user is at

--- a/src/containers/ErrorView/styles.scss
+++ b/src/containers/ErrorView/styles.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   font-family: monospace;
   justify-content: center;
-  background-color: white;
+  background-color: $white;
   border-radius: 10px;
   width: 70%;
 
