--- a/src/containers/CartView/styles.scss
+++ b/src/containers/CartView/styles.scss
@@ -19,7 +19,7 @@
   &__button-cart {
     padding: 20px;
     margin: 10px 0;
-    background-color: #333;
+    background-color: $brownish;
     color: #ffffff;
     border: none;
     border-radius: 5px;
