--- a/src/containers/GiftView/styles.scss
+++ b/src/containers/GiftView/styles.scss
@@ -31,7 +31,7 @@
 
       a {
         text-decoration: none;
-        color: #333;
+        color: $brownish;
         font-weight: 500;
         transition: color 0.3s;
       }
